Initial Java 22 port. Seems to be working good on Linux. Windows and Mac testing to follow before publishing.