@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sshtools</groupId>
     <artifactId>pty4j21</artifactId>
-    <version>0.21.1-SNAPSHOT</version>
+    <version>0.22.0-SNAPSHOT</version>
     <name>Pty4J21</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -26,7 +26,7 @@
     </organization>
     <inceptionYear>2023</inceptionYear>
     <url>https://github.com/brett-smith/pty4j</url>
-    <description>Java 21 fork of Pty4J
+    <description>Java 21 and Java 22+ fork of Pty4J
     </description>
     <licenses>
         <license>
@@ -101,9 +101,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<release>21</release>
-					<testRelease>21</testRelease>
-					<enablePreview>true</enablePreview>
+					<release>22</release>
+					<testRelease>22</testRelease>
 				</configuration>
 			</plugin>
 			
@@ -111,7 +110,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>--enable-preview --enable-native-access=com.sshtools.pty4j</argLine>
+                    <argLine>--enable-native-access=com.sshtools.pty4j</argLine>
                 </configuration>
             </plugin>
 			
@@ -205,10 +204,9 @@
                         </execution>
                     </executions>
                     <configuration>
-                        <additionalOptions>--enable-preview</additionalOptions>
                         <encoding>UTF-8</encoding>
                         <detectJavaApiLink>false</detectJavaApiLink>
-                        <source>21</source>
+                        <source>22</source>
                         <doclint>none</doclint>
                         <sourcepath>src</sourcepath>
                         <includeDependencySources>false</includeDependencySources>
